CSE 331 Homework 6.  Answers to Written questions.
Edit this file to supply your answers.

Name:  Luke LeVasseur

Briefly describe any changes made to your Graph ADT from HW5 and why 
those changes were made below.  (See the HW6 assignment for details.)

Eliminated method stub for getPath() in Graph, as it is implemented in MarvelPaths class instead

Changed return type of Node.getEdges() from Set to List for easier sorting in BFS algorithm

Implemented Comparable interface for Edges for sorting ability in MarvelPaths TreeSet