@@ -1,11 +1,0 @@
-"a"	"1"
-"a"	"2"
-"a"	"3"
-"b"	"2"
-"b"	"3"
-"b"	"4"
-"c"	"4"
-"c"	"5"
-"c"	"6"
-"d"	"7"
-"d"	"6"
